--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     </style>
 </head>
 <body>
-    <div><img src="images/XTVC18垃圾箱.png"></div>
+    <div><img src="images/XTVC18.png"></div>
 </body>
 </html>
