--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             align-items:center;/*元素在主轴（页面）当前行的横轴（纵轴）方向上居中放置*/
             justify-content:center;/*元素在主轴（页面）上居中排列*/
             height: 100vh;/*动态高度百分比布局，浏览器视区大小单位，vh就是当前屏幕可见高度的1%*/
+            overflow:hidden;
         }
         /*图片上下左右居中显示*/
         div{
