--- a/casecollection.html
+++ b/casecollection.html
@@ -5,14 +5,14 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minmum-scale=1.0">
     <title>中联环境分体式垃圾站业务部</title>
-    <link rel="shortcut icon" type="image/x-icon" href="image/中联logo.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/中联logo.ico"/>
     <link type="text/css" rel="stylesheet" href="demo1.css">
 </head>
 <body>
     <div id="container">
         <div id="heading">
             <!--<img src="image/logo.png">-->
-            <div class="home"><a href="homepage.html"><img src="image/logo.png"></a></div>
+            <div class="home"><a href="homepage.html"><img src="images/logo.png"></a></div>
         <ul>
             <li class="nav1"><a href="productcenter.html">产品中心</a></li>
             <li class="nav2"><a href="coretechnology.html">核心技术</a></li>
@@ -20,13 +20,13 @@
             <li class="nav4"><a href="aboutus.html">关于我们</a></li>
         </ul></div>
         <div id="content_body">
-            <div class="picture1"><img src="image/天空图片2.jpg"></div>
+            <div class="picture1"><img src="images/天空图片2.jpg"></div>
             <div>
                 <div class="maintext1">用真实案例见证实力</div>
                 <div class="maintext2">企业文化：简单 专业 快执行</div>
             </div>
             <div>
-                <div class="picture2"><img src="image/半下沉-长沙仁和.jpg"></div>
+                <div class="picture2"><img src="images/半下沉-长沙仁和.jpg"></div>
                 <div class="case1text1">半下沉式建筑</div>
                 <div class="case1text2">长沙市第一垃圾中转处理厂</div>
                 <div class="case1text3">垃圾分类转运站-压榨+水平预压法</div>
@@ -45,7 +45,7 @@
                     距离＞50km的超大型垃圾站。</div>
             </div>
             <div>
-                <div class="picture3"><img src="image/地上全包式-宜春城北转运站.jpg"></div>
+                <div class="picture3"><img src="images/地上全包式-宜春城北转运站.jpg"></div>
                 <div class="case3text1">地上全包式建筑</div>
                 <div class="case3text2">宜春城北垃圾转运站</div>
                 <div class="case3text3">竖直直压式-400t/d</div>
@@ -64,7 +64,7 @@
                     距离＞50km的超大型垃圾站。</div>
             </div>
             <div>
-                <div class="picture4"><img src="image/长沙高新区垃圾转运站.jpg"></div>
+                <div class="picture4"><img src="images/长沙高新区垃圾转运站.jpg"></div>
                 <div class="case5text1">平进平出式建筑</div>
                 <div class="case5text2">长沙高新区垃圾转运站</div>
                 <div class="case5text3">垃圾分类转运站-水平直压+竖直直压法</div>
