--- a/homepage.html
+++ b/homepage.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minmum-scale=1.0">
     <title>中联环境分体式垃圾站业务部</title>
-    <link rel="shortcut icon" type="image/x-icon" href="image/中联logo.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/中联logo.ico"/>
     <style>
         *{
             margin: 0;
@@ -78,7 +78,7 @@
     <div id="container">
         <div id="heading">
             <!--<img src="image/logo.png">-->
-            <div class="home"><a href="homepage.html"><img src="image/logo.png"></a></div>
+            <div class="home"><a href="homepage.html"><img src="images/logo.png"></a></div>
             <ul>
                 <li class="nav1"><a href="productcenter.html">产品中心</a></li>
                 <li class="nav2"><a href="coretechnology.html">核心技术</a></li>
@@ -86,7 +86,7 @@
                 <li class="nav4"><a href="aboutus.html">关于我们</a></li>
             </ul></div>
         <div id="content_body">
-            <div class="homepage1"><img src="image/首页.jpg"></div>
+            <div class="homepage1"><img src="images/首页.jpg"></div>
         <!--</div>-->
         <!--<div id="footing">-->
             <!--<div>-->
