--- a/homepage.html
+++ b/homepage.html
@@ -82,7 +82,7 @@
             <ul>
                 <li class="nav1"><a href="productcenter.html">产品中心</a></li>
                 <li class="nav2"><a href="coretechnology.html">核心技术</a></li>
-                <li class="nav3"><a href="casecollection.html">案例集锦</a></li>
+                <li class="nav3"><a href="index.html">案例集锦</a></li>
                 <li class="nav4"><a href="aboutus.html">关于我们</a></li>
             </ul></div>
         <div id="content_body">
