--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minmum-scale=1.0">
     <title>中联环境分体式垃圾站业务部</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/中联logo.ico"/>
-    <link type="text/css" rel="stylesheet" href="demo1.css">
+    <link type="text/css" rel="stylesheet" href="index.css">
 </head>
 <body>
     <div id="container">
