--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ li{
 .box {
     width: 608px;
     height: 240px;
-    background: url(image/地上半包式-哈尔滨松北转运站.png) no-repeat center;
+    background: url(images/地上半包式-哈尔滨松北转运站.png) no-repeat center;
     background-size: cover;
     position: absolute;
     top:1350px;
@@ -265,7 +265,7 @@ li{
 .box2 {
     width: 608px;
     height: 240px;
-    background: url(image/地上半包式-常德刘家湾转运站.png) no-repeat center;
+    background: url(images/地上半包式-常德刘家湾转运站.png) no-repeat center;
     background-size: cover;
     position: absolute;
     top:1350px;
@@ -420,7 +420,7 @@ li{
 .box3 {
     width: 608px;
     height: 240px;
-    background: url(image/全下沉式1.png) no-repeat center;
+    background: url(images/全下沉式1.png) no-repeat center;
     background-size: cover;
     position: absolute;
     top:2510px;
@@ -480,7 +480,7 @@ li{
 .box4 {
     width: 608px;
     height: 240px;
-    background: url(image/全下沉式2.png) no-repeat center;
+    background: url(images/全下沉式2.png) no-repeat center;
     background-size: cover;
     position: absolute;
     top:2510px;
@@ -622,7 +622,7 @@ li{
 .rocket {
     width: 60px;
     height: 120px;
-    background: url(image/rocket1.png) top;
+    background: url(images/rocket1.png) top;
     background-size: cover;
     position: fixed;
     right: 50px;
