--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ li{
     width: 100%;
     height: 400px;
     max-width: 100%;
-    background: url("image/天空图片2.jpg") top;
+    background: url("images/天空图片2.jpg") top;
     background-repeat: no-repeat;
     background-size: cover;
     margin-left: 0;
@@ -184,7 +184,7 @@ li{
                 <div class="maintext2">企业文化：简单 专业 快执行</div>
             </div>
             <div>
-                <div class="picture2"><img src="images/半下沉-长沙仁和.jpg"></div>
+                <div class="picture2"><img src="images/1半下沉-长沙仁和.jpg"></div>
             </div>
     </div>
     <div class="rocket">
