--- a/index.html
+++ b/index.html
@@ -219,7 +219,9 @@ li{
             <li class="nav2"><a href="coretechnology.html">核心技术</a></li>
             <li class="nav3"><a href="index.html">案例集锦</a></li>
             <li class="nav4"><a href="aboutus.html">关于我们</a></li>
-        </ul></div>
+        </ul><div class="navlogo"><img src="image/list.png">
+            </div>
+        </div>
         <div id="content_body">
             <div class="picture1"></div>
             <div>
