--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         width: 100%;
         height: 200px;
         max-width: 100%;
-        background: url("image/天空图片2.jpg") top;
+        background: url("images/天空图片2.jpg") top;
         background-repeat: no-repeat;
         background-size: cover;
         margin-left: 0;
