--- a/index.html
+++ b/index.html
@@ -207,6 +207,19 @@ li{
 .picture2>img:hover{
     transform:scale(1.2);/*鼠标点击时缩放倍数*/
 }
+.rocket {s
+    width: 40px;
+    height: 80px;
+    background: url(images/rocket1.png) top;
+    background-size: cover;
+    position: fixed;
+    right: 50px;
+    bottom: 50px;
+    display: none;
+}
+.rocket:hover {
+    background-position: bottom;
+}
     </style>
 </head>
 <body>
