--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ li{
 .picture2>img:hover{
     transform:scale(1.2);/*鼠标点击时缩放倍数*/
 }
-.rocket {s
+.rocket {
     width: 40px;
     height: 80px;
     background: url(images/rocket1.png) top;
