--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ li{
 .rocket {
     width: 40px;
     height: 80px;
-    background: url(images/rocket1.png) top;
+    background: url("images/rocket1.png") top;
     background-size: cover;
     position: fixed;
     right: 50px;
