--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
         margin-top: 155px;
         overflow: hidden;
     }
+    .picture3{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture4{
+        margin-top: 10px;
+        overflow: hidden;
+    }
     .case2text1{
         font-size: 32px;
         font-weight: bold;
@@ -48,6 +56,20 @@
         margin-top: 30px;
         /*border: solid 2px #99cc33;*/
         /*box-shadow: 5px 5px 10px gray;*/
+    }
+    .footext1{
+        text-align: center;
+        font-size: 14px;
+        font-weight: normal;
+        color: white;
+        padding-top: 5px;
+    }
+    .footext2{
+        text-align: center;
+        font-size: 14px;
+        font-weight: normal;
+        color: white;
+        padding-bottom: 5px;
     }
 }
 
@@ -84,6 +106,28 @@
     .picture2{
         margin-top: 155px;
         overflow: hidden;
+    }
+    .picture3{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture4{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .footext1{
+        text-align: center;
+        font-size: 14px;
+        font-weight: normal;
+        color: white;
+        padding-top: 5px;
+    }
+    .footext2{
+        text-align: center;
+        font-size: 14px;
+        font-weight: normal;
+        color: white;
+        padding-bottom: 5px;
     }
 
 }
@@ -129,13 +173,19 @@
         margin-top: 54px;
         overflow: hidden;
     }
-    .case2text1{
-        font-size: 20px;
-        font-weight: bold;
-        color: #53565a;
-        margin-top: 20px;
-        /*border: solid 2px #99cc33;*/
-        /*box-shadow: 5px 5px 10px gray;*/
+    .picture3{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture4{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .footext1{
+        display: none;
+    }
+    .footext2{
+        display: none;
     }
 
 }
@@ -179,7 +229,7 @@ li{
 }
 #content_body{
     width: 80%;
-    height: 3400px;
+    height: 2343px;
     text-align: center;
     background-color: #f5f5ff;
     margin: auto;
@@ -206,6 +256,33 @@ li{
 }
 .picture2>img:hover{
     transform:scale(1.2);/*鼠标点击时缩放倍数*/
+}
+.picture3>img{
+    display: block;/*图片以块级元素显示*/
+    width:100%;
+    height:100%;
+    max-width: 100%;
+    transition:all 1s;/*缩放变化所用时间*/
+}
+.picture3>img:hover{
+    transform:scale(1.2);/*鼠标点击时缩放倍数*/
+}
+.picture4>img{
+    display: block;/*图片以块级元素显示*/
+    width:100%;
+    height:100%;
+    max-width: 100%;
+    transition:all 1s;/*缩放变化所用时间*/
+}
+.picture4>img:hover{
+    transform:scale(1.2);/*鼠标点击时缩放倍数*/
+}
+#footing {
+    width: 100%;
+    height: 50px;
+    background-color: #53565a;
+    margin-top: 10px;
+    overflow: hidden;
 }
 .rocket {
     width: 40px;
