--- a/index.html
+++ b/index.html
@@ -320,7 +320,15 @@ li{
             </div>
             <div>
                 <div class="picture2"><img src="images/1半下沉-长沙仁和.jpg"></div>
+                <div class="picture3"><img src="images/1地上全包式-宜春城北转运站.jpg"></div>
+                <div class="picture4"><img src="images/1长沙高新区垃圾转运站.jpg"></div>
             </div>
+            <div id="footing">
+            <div>
+                <div class="footext1">电话：0731-8888888    地址：湖南省长沙市高新区林语路288号    E-maile:yuexd@infore.com</div>
+                <div class="footext2">copyright 2019    长沙中联重科环境产业有限公司      版权所有 [湘ICP备××××××××号]</div>
+            </div>
+        </div>
     </div>
     <div class="rocket">
     <script
