--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>中联环境分体式垃圾站业务部</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/中联logo.ico"/>
     <style>
-       /*PC端样式*/
+/*PC端样式*/
 @media screen and (min-width: 1030px) {
     .home{
         margin-left: 200px;
@@ -38,25 +38,42 @@
         padding-top: 50px;
     }
     .picture2{
-        margin-top: 155px;
+        margin-top: 165px;
         overflow: hidden;
     }
     .picture3{
-        margin-top: 10px;
-        overflow: hidden;
-    }
+             margin-top: 10px;
+             overflow: hidden;
+         }
     .picture4{
         margin-top: 10px;
         overflow: hidden;
     }
-    .case2text1{
-        font-size: 32px;
-        font-weight: bold;
-        color: #53565a;
-        margin-top: 30px;
-        /*border: solid 2px #99cc33;*/
-        /*box-shadow: 5px 5px 10px gray;*/
+    .picture5{
+        margin-top: 10px;
+        overflow: hidden;
     }
+    .picture6{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture7{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture8{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture9{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture10{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+
     .footext1{
         text-align: center;
         font-size: 14px;
@@ -72,20 +89,21 @@
         padding-bottom: 5px;
     }
     #content_body{
-    width: 80%;
-    height: 2343px;
-    text-align: center;
-    background-color: #f5f5ff;
-    margin: auto;
-}
-
+        width: 80%;
+        height: 6643px;
+        text-align: center;
+        background-color: #f5f5ff;
+        margin: auto;
+    }
     #footing {
-    width: 100%;
-    height: 50px;
-    background-color: #53565a;
-    margin-top: 50px;
-    overflow: hidden;
-}
+        width: 100%;
+        height: 50px;
+        background-color: #53565a;
+        margin-top: 50px;
+        overflow: hidden;
+    }
+
+
 }
 
 /*ipad端样式*/
@@ -119,7 +137,7 @@
         padding-top: 50px;
     }
     .picture2{
-        margin-top: 155px;
+        margin-top: 165px;
         overflow: hidden;
     }
     .picture3{
@@ -127,6 +145,30 @@
         overflow: hidden;
     }
     .picture4{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture5{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture6{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture7{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture8{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture9{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture10{
         margin-top: 10px;
         overflow: hidden;
     }
@@ -144,20 +186,6 @@
         color: white;
         padding-bottom: 5px;
     }
-    #content_body{
-    width: 80%;
-    height: 2343px;
-    text-align: center;
-    background-color: #f5f5ff;
-    margin: auto;
-}
-    #footing {
-    width: 100%;
-    height: 50px;
-    background-color: #53565a;
-    margin-top: 10px;
-    overflow: hidden;
-}
 
 }
 
@@ -199,7 +227,7 @@
         padding-top: 5px;
     }
     .picture2{
-        margin-top: 54px;
+        margin-top: 80px;
         overflow: hidden;
     }
     .picture3{
@@ -210,6 +238,30 @@
         margin-top: 10px;
         overflow: hidden;
     }
+    .picture5{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture6{
+         margin-top: 10px;
+         overflow: hidden;
+     }
+    .picture7{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture8{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture9{
+        margin-top: 10px;
+        overflow: hidden;
+    }
+    .picture10{
+        margin-top: 10px;
+        overflow: hidden;
+    }
     .footext1{
         display: none;
     }
@@ -217,18 +269,19 @@
         display: none;
     }
     #content_body{
-    width: 80%;
-    text-align: center;
-    background-color: #f5f5ff;
-    margin: auto;
-}
+        width: 80%;
+        /*height: 100px;*/
+        text-align: center;
+        background-color: #f5f5ff;
+        margin: auto;
+    }
     #footing {
-    width: 100%;
-    height: 50px;
-    background-color: #53565a;
-    margin-top: 10px;
-    overflow: hidden;
-}
+        width: 100%;
+        height: 50px;
+        background-color: #53565a;
+        margin-top: 10px;
+        overflow: hidden;
+    }
 
 
 }
@@ -272,6 +325,7 @@ li{
 }
 
 
+
 /*.maintext1{*/
     /*font-size: 48px;*/
     /*font-weight: bold;*/
@@ -313,11 +367,70 @@ li{
 .picture4>img:hover{
     transform:scale(1.2);/*鼠标点击时缩放倍数*/
 }
-
+.picture5>img{
+    display: block;/*图片以块级元素显示*/
+    width:100%;
+    height:100%;
+    max-width: 100%;
+    transition:all 1s;/*缩放变化所用时间*/
+}
+.picture5>img:hover{
+    transform:scale(1.2);/*鼠标点击时缩放倍数*/
+}
+.picture6>img{
+    display: block;/*图片以块级元素显示*/
+    width:100%;
+    height:100%;
+    max-width: 100%;
+    transition:all 1s;/*缩放变化所用时间*/
+}
+.picture6>img:hover{
+    transform:scale(1.2);/*鼠标点击时缩放倍数*/
+}
+.picture7>img{
+    display: block;/*图片以块级元素显示*/
+    width:100%;
+    height:100%;
+    max-width: 100%;
+    transition:all 1s;/*缩放变化所用时间*/
+}
+.picture7>img:hover{
+    transform:scale(1.2);/*鼠标点击时缩放倍数*/
+}
+.picture8>img{
+    display: block;/*图片以块级元素显示*/
+    width:100%;
+    height:100%;
+    max-width: 100%;
+    transition:all 1s;/*缩放变化所用时间*/
+}
+.picture8>img:hover{
+    transform:scale(1.2);/*鼠标点击时缩放倍数*/
+}
+.picture9>img{
+    display: block;/*图片以块级元素显示*/
+    width:100%;
+    height:100%;
+    max-width: 100%;
+    transition:all 1s;/*缩放变化所用时间*/
+}
+.picture9>img:hover{
+    transform:scale(1.2);/*鼠标点击时缩放倍数*/
+}
+.picture10>img{
+    display: block;/*图片以块级元素显示*/
+    width:100%;
+    height:100%;
+    max-width: 100%;
+    transition:all 1s;/*缩放变化所用时间*/
+}
+.picture10>img:hover{
+    transform:scale(1.2);/*鼠标点击时缩放倍数*/
+}
 .rocket {
-    width: 40px;
-    height: 80px;
-    background: url("images/rocket1.png") top;
+    width: 60px;
+    height: 120px;
+    background: url(images/rocket1.png) top;
     background-size: cover;
     position: fixed;
     right: 50px;
@@ -332,14 +445,15 @@ li{
 <body>
     <div id="container">
         <div id="heading">
-            <!--<img src="image/logo.png">-->
+            <!--<img src="images/logo.png">-->
             <div class="home"><a href="homepage.html"><img src="images/logo.png"></a></div>
         <ul>
             <li class="nav1"><a href="productcenter.html">产品中心</a></li>
             <li class="nav2"><a href="coretechnology.html">核心技术</a></li>
-            <li class="nav3"><a href="index.html">案例集锦</a></li>
+            <li class="nav3"><a href="casecollection.html">案例集锦</a></li>
             <li class="nav4"><a href="aboutus.html">关于我们</a></li>
-        </ul><div class="navlogo"><img src="images/list.png">
+        </ul>
+            <div class="navlogo"><img src="images/list.png">
             </div>
         </div>
         <div id="content_body">
@@ -349,11 +463,34 @@ li{
                 <div class="maintext2">企业文化：简单 专业 快执行</div>
             </div>
             <div>
-                <div class="picture2"><img src="images/1半下沉-长沙仁和.jpg"></div>
-                <div class="picture3"><img src="images/1地上全包式-宜春城北转运站.jpg"></div>
-                <div class="picture4"><img src="images/1长沙高新区垃圾转运站.jpg"></div>
+                <div class="picture2"><img src="images/半下沉-长沙仁和.jpg"></div>
             </div>
-            <div id="footing">
+            <div>
+                <div class="picture3"><img src="images/海南三亚400td半地下式水平直压.jpg"></div>
+            </div>
+            <div>
+                <div class="picture4"><img src="images/南京栖霞400td半地下式水平直压.jpg"></div>
+            </div>
+            <div>
+                <div class="picture5"><img src="images/地上全包式-宜春城北转运站.jpg"></div>
+            </div>
+            <div>
+                <div class="picture6"><img src="images/江西宜春400td地上式竖直直压.jpg"></div>
+            </div>
+            <div>
+                <div class="picture6"><img src="images/顺德乐从1200td地上式水平预压.jpg"></div>
+            </div>
+            <div>
+                <div class="picture7"><img src="images/常德石门400td地上式水平直压.jpg"></div>
+            </div>
+            <div>
+                <div class="picture8"><img src="images/哈尔滨松北1000td地上式-水平预压.jpg"></div>
+            </div>
+            <div>
+                <div class="picture9"><img src="images/新疆伊宁600td地上式水平直压.jpg"></div>
+            </div>
+                <div class="picture10"><img src="images/长沙高新区垃圾转运站.jpg"></div>
+        <div id="footing">
             <div>
                 <div class="footext1">电话：0731-8888888    地址：湖南省长沙市高新区林语路288号    E-maile:yuexd@infore.com</div>
                 <div class="footext2">copyright 2019    长沙中联重科环境产业有限公司      版权所有 [湘ICP备××××××××号]</div>
@@ -366,5 +503,6 @@ li{
             integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
             crossorigin="anonymous"></script>
         <script src="index2.js"></script>
+    </div>
 </body>
 </html>
